--- a/package.json
+++ b/package.json
@@ -3,13 +3,12 @@
   "description": "A Vue.js component for Mapbox GL",
   "version": "0.0.1",
   "author": "Guillem Aldeguer Lima <guillem.aldeguer@gmail.com>",
-  "private": true,
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
-    "mapbox-gl": "^0.34.0",
+    "mapbox-gl": ">=0.23.0",
     "vue": "^2.2.1"
   },
   "devDependencies": {
