--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vue2-mapboxgl-component",
   "description": "A Vue.js component for Mapbox GL",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "author": "Guillem Aldeguer Lima <guillem.aldeguer@gmail.com>",
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "mapbox-gl": ">=0.23.0",
-    "vue": "^2.2.1"
+    "vue": ">=2.2.1"
   },
   "devDependencies": {
     "babel-core": "^6.0.0",
